# cognizantaimlapril2026

./: README.md
BankingSystem/: pyproject.toml
BankingSystem/docs/source/: conf.py
day2/: pyproject.toml
day2/docs/source/: conf.py  index.rst
day2/ecommerce.egg-info/: PKG-INFO
day2/src/: app.py  start.py
day2/src/ecommerce.egg-info/: SOURCES.txt  top_level.txt
day2/src/model/: customer.py
day2/src/store/: customer.py  customerstore.py
day2/src/view/: customerview.py
day3/: healthcarereport.html  healthcaretestreport.html  pyproject.toml
day3/Healthcare.egg-info/: PKG-INFO
day3/conf/: logger_conf.py
day3/day3env/: pyproject.toml  pyvenv.cfg
day3/src/: person.py
day3/src/Healthcare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day3/src/exceptions/: appointment_not_found_exception.py  doctor_not_found_exception.py  patient_not_found_expection.py
day3/src/models/: appointment.py  doctor.py  patient.py  role.py  staff.py
day3/src/stores/: appointmentstore.py  doctorestore.py  doctorstore.py  patientstore.py
day3/src/utils/: app.py  main.py
day3/tests/: doctors.csv  patients.csv
day3/tests/contract_testing/: test_doctor.py  test_doctor_store.py  test_patients.py
day5/: .env  pyproject.toml
day5/day5env/: pyvenv.cfg
day5/src/Banking_Project.egg-info/: PKG-INFO  SOURCES.txt
day5/src/configurations/: conf.py
day6/: pyproject.toml
day6/day6env/: pyvenv.cfg
healthcareproject/: README.md  pyproject.toml
healthcareproject/healthcareenv/: pyvenv.cfg
healthcareproject/src/: app.py
healthcareproject/src/healthcareenv/: pyvenv.cfg
healthcareproject/src/model/: doctor.py  patient.py
healthcareproject/src/store/: doctor.py  patient.py
healthcareproject/src/view/: doctor.py  patient.py
(+22 files in other folders)
